Support set cardinality in bulk loading